[gd_scene load_steps=5 format=3 uid="uid://d1os340hnr1fo"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_7tsaj"]
[ext_resource type="FontFile" uid="uid://dg2aphvdwty0k" path="res://fonts/default.ttf" id="1_sgl4e"]
[ext_resource type="FontFile" uid="uid://np7fuakwj8ct" path="res://fonts/announcement.TTF" id="2_lvq65"]

[sub_resource type="Theme" id="Theme_00dct"]
default_font = ExtResource("1_sgl4e")
default_font_size = 24

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_00dct")
script = ExtResource("1_7tsaj")

[node name="Datetime" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -233.0
offset_bottom = 29.0
grow_horizontal = 0

[node name="Background" type="ColorRect" parent="Datetime"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(7.31587e-05, 0.539619, 0.947246, 1)

[node name="Day" type="Label" parent="Datetime"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -13.5
offset_right = 105.0
offset_bottom = 13.5
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Day 999,"
horizontal_alignment = 2

[node name="Time" type="Label" parent="Datetime"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -13.5
offset_right = -6.0
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Afternoon"

[node name="Funds" type="Control" parent="."]
anchors_preset = 0
offset_right = 254.0
offset_bottom = 83.0

[node name="Background" type="ColorRect" parent="Funds"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 134.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(7.31587e-05, 0.539619, 0.947246, 1)

[node name="LabelContainer" type="VBoxContainer" parent="Funds"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -3.0
offset_right = 129.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Money" type="HBoxContainer" parent="Funds/LabelContainer"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="Funds/LabelContainer/Money"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Gold:"

[node name="MoneyAmt" type="Label" parent="Funds/LabelContainer/Money"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "999,999,999"

[node name="Resources" type="HBoxContainer" parent="Funds/LabelContainer"]
layout_mode = 2

[node name="ResourcesLabel" type="Label" parent="Funds/LabelContainer/Resources"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Materials:
"

[node name="ResourcesAmt" type="Label" parent="Funds/LabelContainer/Resources"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "999,999,999"

[node name="Owed" type="HBoxContainer" parent="Funds/LabelContainer"]
layout_mode = 2

[node name="OwedLabel" type="Label" parent="Funds/LabelContainer/Owed"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Owed:"

[node name="OwedAmt" type="Label" parent="Funds/LabelContainer/Owed"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "999,999,999/999,999,999"

[node name="Broadcast" type="Control" parent="."]
process_mode = 1
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
grow_horizontal = 2
grow_vertical = 0

[node name="Background" type="ColorRect" parent="Broadcast"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(7.31587e-05, 0.539619, 0.947246, 1)

[node name="BroadcastText" type="Label" parent="Broadcast"]
process_mode = 1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1170.0
offset_top = -11.5
offset_right = 1170.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lvq65")
theme_override_font_sizes/font_size = 48
text = "Announcement text scrolls by here on this line"

[node name="PauseScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(7.31587e-05, 0.539619, 0.947246, 1)

[node name="Label" type="Label" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Paused"
